# discpp

./: .gitmodules  CMakeLists.txt  README.md
include/discpp/: client.h  definitions.h  discpp.h
libs/: CMakeLists.txt
src/: client.cpp  discpp.cpp
tests/: CMakeLists.txt  should_succeed.cpp
